fix: gap

--- a/components/ProfileActivity/ProfileActivity.module.css
+++ b/components/ProfileActivity/ProfileActivity.module.css
@@ -42,7 +42,7 @@
 
 @media screen and (max-width: 700px) {
   .event-list {
-    gap: 1.5rem;
+    gap: 2rem;
   }
   .event {
     grid-template-columns: 1fr;
